# learn_meeting_room

./: .dockerignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt
meeting_room/booking_system/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
meeting_room/booking_system/migrations/: 0001_initial.py  0002_booking_date_from_booking_date_to_booking_time_from_and_more.py  0003_alter_booking_time_from_alter_booking_time_to.py  0004_alter_booking_time_from_alter_booking_time_to.py
meeting_room/booking_system/services/: create_names_service.py
meeting_room/booking_system/templates/booking_system/: base.html  login.html  t_booking_list.html  t_room_bookings_details.html  t_room_list.html
meeting_room/meeting_room/: settings.py  urls.py
nginx/: nginx.dev.conf
