[tool.poetry]
name = "learn-meeting-room"
version = "0.1.0"
description = "Test task with usage of Django/DRF"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "learn_meeting_room"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
