[tool.poetry]
name = "learn-meeting-room"
version = "0.1.0"
description = "Test task with usage of Django/DRF"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "learn_meeting_room"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
djangorestframework = "^3.14.0"
pep8 = "^1.7.1"
pylint = "^2.15.5"
pycodestyle = "^2.9.1"
drf-yasg = "^1.21.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
